# edgetx_my_board

./: fw.json
companion/src/: CMakeLists.txt
companion/src/firmwares/: boards.cpp  boards.h
companion/src/firmwares/opentx/: opentxinterface.cpp
companion/src/simulation/: simulatorwidget.cpp
companion/src/translations/: companion_en.ts
radio/src/: CMakeLists.txt  dataconstants.h  datastructs.h  datastructs_private.h  debug.cpp  debug.h  edgetx.cpp  model_init.cpp  rtc.cpp  simu.cpp
radio/src/gui/128x64/: model_flightmodes.cpp  model_setup.cpp  model_special_functions.cpp  view_main.cpp
radio/src/gui/navigation/: navigation.h
radio/src/storage/yaml/: CMakeLists.txt  yaml_datastructs.cpp  yaml_datastructs_128x64.cpp
radio/src/targets/simu/: opentxsimulator.cpp
radio/src/targets/xetoz/: CMakeLists.txt  board.cpp  board.h  hal.h  sample_command.sh  usb_descriptor.h
radio/util/hw_defs/: generator.py  legacy_names.py  switch_config.py
tools/: boards.py  build-common.sh  build-companion.sh  generate-hw-defs.sh  generate-yaml.sh  msys2_fetch_and_build_all.sh
